Bug 1648939 - Ensure that the widget starts with the correct opacity / transform. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D81554